Use config to save individual-level data
and save it in Rdata directory on CAP drive (and not in the Qualtrics directory in github)

--- a/analysis/Qualtrics/SES_COVQ_PCA.Rmd
+++ b/analysis/Qualtrics/SES_COVQ_PCA.Rmd
@@ -514,9 +514,10 @@ covqPhs2pca = prcomp(na.omit(covqDFphs2top4), center=TRUE, scale = TRUE);
 
 Save individual-level data frames
 ```{r}
-#rdataDir=config$path$Rdata
 
-save(file= subLevelLong.Rdata",subLevelLong);
-save(file="subLevelWide.Rdata",subLevelWide);
+subLongFilePath = file.path(config$path$Rdata, config$Rdata_files$QualtricsSubLevelLong);
+subWideFilePath = file.path(config$path$Rdata, config$Rdata_files$QualtricsSubLevelWide);
+save(file= subLongFilePath, subLevelLong);
+save(file= subWideFilePath, subLevelWide);
 ```
 
